--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
     "firebase": "^4.2.0",
+    "intl": "^1.2.5",
     "ng2-validation": "^4.2.0",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
@@ -47,7 +48,9 @@
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "phantomjs-prebuilt": "^2.1.16",
+    "protractor": "^5.4.1",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
